build production version for hosting

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Portfolio | main page
+    title Portfolio
   body
     .wrapper
       .maincontent
