--- a/src/templates/blocks/personal-info.pug
+++ b/src/templates/blocks/personal-info.pug
@@ -7,7 +7,7 @@ section.personal-info
         .personal-info__image-table
           .personal-info__image-block
             .personal-info__image-wrapper
-              +image("content/user.jpg", "personal-info__image")
+              +image("content/avatar.jpg", "personal-info__image")
           .personal-info__table-info
             table.personal-info__table
               each value, key in tableRows
