--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
-include ./layout/mixins.pug
+include ./templates/layout/mixins.pug
 
 <!DOCTYPE html>
 html(lang="ru")
@@ -7,12 +7,13 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(rel="icon" href="src/images/icons/favicon.ico" type="image/x-icon")
     title PY | Portfolio
 
   body
     .wrapper
-      .maincontent
+      main.maincontent
         .greeting
-          include ./blocks/hero
-          include ./blocks/personal-info
+          include ./templates/blocks/hero
+          include ./templates/blocks/personal-info
         
