--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -11,6 +11,10 @@ html {
   height: 100%;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 body {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-size: 16px;
@@ -18,28 +22,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $text-color;
-}
-
-.wrapper {
-  overflow: hidden;
-  min-height: 100%;
-  position: relative;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1480px;
-  width: 95%;
-  /* width: 1490px; */
-
-  @include phones {
-    width: 85%;
-  }
-}
-
-.fullscreen-section {
-  height: 100vh;
-  min-height: 650px;
 }
 
 button {
@@ -87,4 +69,35 @@ img {
   display: block;
   max-width: 100%;
   max-height: 100%;
+}
+
+
+/* layout classes */
+.wrapper {
+  overflow: hidden;
+  min-height: 100%;
+  position: relative;
+  /* min-width: 1480px;
+  overflow-x: auto; */
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1480px;
+  width: 95%;
+
+  @include phones {
+    width: 85%;
+  }
+}
+
+.fullscreen-section {
+  height: 100vh;
+  min-height: 650px;
+}
+
+.main-content {
+  flex: 1;
 }
