--- a/src/templates/blocks/hero.pug
+++ b/src/templates/blocks/hero.pug
@@ -1,8 +1,8 @@
 section.hero.fullscreen-section
-  .container
+  .container.hero__container
     include ./header
-    .hero__greeting-block
-      h2.hero__greeting-text Личный сайт веб-разработчика
-      h1.hero__name Платон Ясев
+    .hero__greeting-block-wrapper
+      .hero__greeting-block
+        h2.hero__greeting-text Личный сайт веб-разработчика
+        h1.hero__name Платон Ясев
     include ./scroll
-    
