--- a/src/templates/blocks/socials.pug
+++ b/src/templates/blocks/socials.pug
@@ -1,7 +1,8 @@
-- var items = ['inst', 'vk', 'gh']
+- var items = ['insta', 'vk', 'github']
 
 .socials
   ul.socials__list
     each item in items
       li(class=`socials__item socials__item--${item}`)
         a(href="#").socials__link
+          +icon(item, `socials__icon socials__icon--${item}`)
