draft styles for skills and works sections

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,4 +16,6 @@ html(lang="ru")
         .greeting
           include ./templates/blocks/hero
           include ./templates/blocks/personal-info
+        include ./templates/blocks/skills
+        include ./templates/blocks/works
         
