--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -57,6 +57,8 @@ p {
 button[type="button"] {
   cursor: pointer;
   background-color: transparent;
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -85,7 +87,7 @@ img {
 
 .container {
   margin: 0 auto;
-  max-width: 1480px;
+  max-width: 1480PX;
   width: 95%;
 
   @include phones {
@@ -95,7 +97,7 @@ img {
 
 .fullscreen-section {
   height: 100vh;
-  min-height: 650px;
+  min-height: 650PX;
 }
 
 .main-content {
