--- a/src/templates/blocks/hero.pug
+++ b/src/templates/blocks/hero.pug
@@ -4,5 +4,5 @@ section.hero.fullscreen-section
     .hero__greeting-block-wrapper
       .hero__greeting-block
         h2.hero__greeting-text Личный сайт веб-разработчика
-        h1.hero__name Платон Ясев
+        h1.title.title--hero Платон Ясев
     include ./scroll
