--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -3,3 +3,13 @@
 @import "./mixins.pcss";
 @import "./layout/base.pcss";
 @import './blocks/*.pcss';
+
+/* .icon-bg {
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  background: svg-load('github.svg', fill=$text-color, width=100%, height=100%);
+  &:hover {
+    background: svg-load('github.svg', fill=#55ddcc, width=100%, height=100%);
+  }
+} */
