markup reviews section

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,4 +18,7 @@ html(lang="ru")
           include ./templates/blocks/personal-info
         include ./templates/blocks/skills
         include ./templates/blocks/works
+        .reviews-contacts-block
+          .container
+            include ./templates/blocks/reviews
         
