--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -18,6 +18,7 @@
 
 .works__preview-img-wrapper {
   position: relative;
+  width: 100%;
 }
 
 .works__preview-list {
@@ -41,27 +42,10 @@
   display: inline-flex;
 }
 
-.works__slider-arrow-wrapper {
+.works__slider-btn {
   width: 50px;
   height: 50px;
   position: relative;
-}
-
-.works__slider-arrow {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 20%;
-  height: 20%;
-  fill: white;
-
-  &--up {
-    transform: translate(-50%, -50%) rotate(-90deg)
-  }
-
-  &--down {
-    transform: translate(-50%, -50%) rotate(90deg)
-  }
 }
 
 .works__desc-block {
