draft styles for reviews, contacts and footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -21,4 +21,7 @@ html(lang="ru")
         .reviews-contacts-block
           .container
             include ./templates/blocks/reviews
+            include ./templates/blocks/contacts
+      include ./templates/blocks/footer
+            
         
