--- a/src/templates/blocks/nav.pug
+++ b/src/templates/blocks/nav.pug
@@ -1,7 +1,7 @@
-- var items = ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"]
+- var navItems = ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"];
 
-.nav
+nav.nav
   ul.nav__list
-    each item in items
+    each item in navItems
       li.nav__item
         a(href="#").nav__link #{item}
