--- a/src/templates/blocks/socials.pug
+++ b/src/templates/blocks/socials.pug
@@ -1,8 +1,8 @@
-- var items = ['insta', 'vk', 'github']
+- var socialItems = ['insta', 'vk', 'github'];
 
 .socials
   ul.socials__list
-    each item in items
+    each item in socialItems
       li(class=`socials__item socials__item--${item}`)
         a(href="#").socials__link
           +icon(item, `socials__icon socials__icon--${item}`)
