--- a/src/styles/blocks/personal-info.pcss
+++ b/src/styles/blocks/personal-info.pcss
@@ -1,5 +1,5 @@
 .personal-info {
-  height: 50vh;
+  padding: 200px 0;
 }
 
 .personal-info__container {
@@ -18,16 +18,20 @@
   align-items: center;
 }
 
-.personal-info__image-wrapper {
-  width: 200px;
-  height: 200px;
-}
-
 .personal-info__image-table-block {
   width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.personal-info__image-wrapper {
+  width: 200px;
+  height: 200px;
+}
+
+.personal-info__image {
+  border-radius: 50%;
 }
 
 .personal-info__text-block {
