--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,5 +1,54 @@
+.reviews {
+  width: 70%;
+  padding: 200px 0;
+}
+
+.reviews__heading-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.reviews__arrows {
+  display: flex;
+  align-items: center;
+}
+
 .reviews__btn {
   position: relative;
   width: 50px;
   height: 50px;
+  border: 1px solid grey;
+  border-radius: 50%;
+
+  &:not(:last-child) {
+    margin-right: 5%;
+  }
+}
+
+.reviews__list {
+  display: flex;
+}
+
+.reviews__item {
+  flex: 1 0 50%;
+}
+
+.reviews__content {
+  margin-bottom: 20px;
+}
+
+.reviews__person-info {
+  display: flex;
+  align-items: center;
+}
+
+.reviews__img-wrapper {
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+}
+
+.reviews__img {
+  border-radius: 50%;
 }
