styles for hero and personal-info sections

--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -5,4 +5,36 @@
 
 .footer__container {
   padding: 100px 0;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 100px;
+}
+
+.footer__copyright {
+  margin-right: 5%;
+}
+
+.footer__content {
+  flex: 1;
+}
+
+.footer__nav {
+  margin-bottom: 3%;
+}
+
+.footer__content-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__about-me {
+  width: 40%;
+}
+
+.footer__text {
+  margin-bottom: 5%;
+}
+
+.footer__quote {
+  width: 50%;
 }
