--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,8 +1,5 @@
 .skills__container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+  padding: 10% 0;
 }
 
 .skills__content {
