--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -1,8 +1,5 @@
 .works__container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+  padding: 10% 0;
 }
 
 .works__slider-item {
