--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,15 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800&subset=cyrillic');
 @import "normalize.css";
 @import "./mixins.pcss";
 @import "./layout/base.pcss";
 @import './blocks/*.pcss';
-
-/* .icon-bg {
-  width: 100px;
-  height: 100px;
-  cursor: pointer;
-  background: svg-load('github.svg', fill=$text-color, width=100%, height=100%);
-  &:hover {
-    background: svg-load('github.svg', fill=#55ddcc, width=100%, height=100%);
-  }
-} */
