--- a/src/templates/blocks/contacts.pug
+++ b/src/templates/blocks/contacts.pug
@@ -1,4 +1,4 @@
-section.contacts
+section.contacts#contacts
   .contacts__content
     h2.title.title--contacts Связаться со мной
     form.contacts__form
