--- a/src/templates/blocks/hero.pug
+++ b/src/templates/blocks/hero.pug
@@ -1,4 +1,4 @@
-section.hero.fullscreen-section
+section.hero.fullscreen-section#hero
   .container.hero__container
     include ./header
     .hero__greeting-block-wrapper
