--- a/src/templates/blocks/reviews.pug
+++ b/src/templates/blocks/reviews.pug
@@ -14,8 +14,8 @@
     }
   ]
 
-section.reviews
-  .reviews__content.reviews__slider
+section.reviews#reviews
+  .reviews__slider
     .reviews__heading-row
       h2.title.title--reviews Что обо мне говорят
       .reviews__arrows
