--- a/src/templates/blocks/skills.pug
+++ b/src/templates/blocks/skills.pug
@@ -1,10 +1,10 @@
 - var frontSkills = ['HTML5', 'CSS3', 'JavaScript', 'jQuery и Vue.js']
 - var workflowSkills = ['GIT', 'Terminal', 'Gulp', 'Webpack']
 
-section.skills.fullscreen-section
+section.skills#skills
   .container.skills__container
     .skills__content-wrapper
-      h2.title.title--skills Чем я могу быть полезен вам
+      h2.title.title--skills.skills__title Чем я могу быть полезен вам
       .skills__content
         .skills__image-block
           +image("bg/bag.png", "skills__img")
