--- a/src/templates/blocks/works.pug
+++ b/src/templates/blocks/works.pug
@@ -10,7 +10,7 @@
 
 - var techList = ['HTML', 'CSS', 'JavaScript']
 
-section.works.fullscreen-section
+section.works#works
   .container.works__container
     .works__content-wrapper
       h2.title.title--works Мои работы
