--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -13,5 +13,15 @@
 }
 
 .hero__greeting-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+}
+
+.hero__greeting-text {
+  color: rgba(65, 76, 99, 0.4);
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.67;
 }
