--- a/src/styles/blocks/personal-info.pcss
+++ b/src/styles/blocks/personal-info.pcss
@@ -1,5 +1,5 @@
 .personal-info {
-  padding: 200px 0;
+  padding: 20% 0;
 }
 
 .personal-info__container {
@@ -19,7 +19,7 @@
 }
 
 .personal-info__image-table-block {
-  width: 40%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,12 +28,44 @@
 .personal-info__image-wrapper {
   width: 200px;
   height: 200px;
+  margin-bottom: 20%;
 }
 
 .personal-info__image {
   border-radius: 50%;
+  box-shadow: 5px 30px 50px -5px rgba(0,0,0,0.2)
+}
+
+.personal-info__col {
+
+  padding: 5px 0;
+
+  &--title {
+    font-weight: 600;
+    color: rgba(65, 76, 99, 0.3);
+    padding-right: 50px;
+  }
+
+  &--content {
+    font-weight: 600;
+  }
 }
 
 .personal-info__text-block {
-  width: 60%;
+  width: 50%;
+  color: rgba(65, 76, 99, 0.5);
+  line-height: 1.88;
+}
+
+.personal-info__title {
+  margin-bottom: 20px;
+}
+
+.personal-info__info-text {
+
+  margin-bottom: 30px;
+
+  &--italic {
+    font-style: italic;
+  }
 }
