--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -28,10 +28,14 @@
 
 .reviews__list {
   display: flex;
+  align-items: stretch;
 }
 
 .reviews__item {
   flex: 1 0 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .reviews__content {
