--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -3,9 +3,16 @@
   align-self: center;
   align-items: center;
   height: 10%;
+
+  &:after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    background: svg-load('scroll.svg', fill=$text-color, width=100%, height=100%) center center no-repeat;
+  }
 }
 
-.scroll__icon {
-  height: 30px;
-  fill: $text-color;
+.scroll__text {
+  margin-right: 2px;
 }
