--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -1,7 +1,20 @@
 .title {
 
+  &--hero {
+    font-size: 72px;
+    font-weight: 800;
+  }
+
+  &--personal-info {
+    font-size: 36px;
+    font-weight: bold;
+    color: $text-color;
+  }
+
   &--skills {
     text-align: center;
+    font-size: 30px;
+    font-weight: bold;
   }
 
   &--reviews {
