--- a/src/templates/blocks/footer.pug
+++ b/src/templates/blocks/footer.pug
@@ -9,22 +9,25 @@ footer.footer
     .footer__content
       .footer__nav
         - var navItems = ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"]
+        - var navAnchors = ["#hero", "#personal-info", "#skills", "#works", "#reviews", "#contacts"];
         nav.nav
           ul.nav__list
-            each item in navItems
+            each item, index in navItems
               li.nav__item
-                a(href="#").nav__link #{item}
+                a(href=`${navAnchors[index]}`).nav__link #{item}
       .footer__content-data
-        article.footer__text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-        .footer__socials
-          - var socialItems = ['insta', 'vk', 'github']
-          .socials
-            ul.socials__list
-              each item in socialItems
-                li(class=`socials__item socials__item--${item}`)
-                  a(href="#").socials__link
-                    +icon(item, `socials__icon socials__icon--${item}`)
-        article.quote
-          .quote__text
-            p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-          .quote__author Martin Golding  
+        .footer__about-me
+          article.footer__text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+          .footer__socials
+            - var socialItems = ['insta', 'vk', 'github']
+            .socials
+              ul.socials__list
+                each item in socialItems
+                  li(class=`socials__item socials__item--${item}`)
+                    a(href="#").socials__link
+                      +icon(item, `socials__icon socials__icon--${item}`)
+        .footer__quote
+          article.quote
+            .quote__text
+              p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает, где вы живете
+            .quote__author Martin Golding  
