--- a/src/templates/blocks/nav.pug
+++ b/src/templates/blocks/nav.pug
@@ -1,7 +1,8 @@
 - var navItems = ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"];
+- var navAnchors = ["#hero", "#personal-info", "#skills", "#works", "#reviews", "#contacts"];
 
 nav.nav
   ul.nav__list
-    each item in navItems
+    each item, index in navItems
       li.nav__item
-        a(href="#").nav__link #{item}
+        a(href=`${navAnchors[index]}`).nav__link #{item}
