change skills section structure

--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,15 +1,10 @@
 .skills__container {
-  padding: 10% 0;
+  /* padding: 10% 0; */
 }
 
 .skills__content {
   display: flex;
   align-items: flex-end;
-}
-
-.skills__list {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .skills__item {
@@ -32,16 +27,3 @@
   height: 100%;
 }
 
-.skills__circle {
-  fill: transparent;
-
-  &--under {
-    stroke-width: 5PX;
-    stroke: #eaeaea;
-  }
-
-  &--above {
-    stroke-width: 10PX;
-    stroke: #ad00ed;
-  }
-}
