--- a/src/templates/blocks/skills.pug
+++ b/src/templates/blocks/skills.pug
@@ -1,31 +1,30 @@
-- var frontSkills = ['HTML5', 'CSS3', 'JavaScript', 'jQuery и Vue.js']
-- var workflowSkills = ['GIT', 'Terminal', 'Gulp', 'Webpack']
+- 
+  var stackItems = [
+    ['Front-end', ['HTML5', 'CSS3', 'JavaScript', 'jQuery и Vue.js']],
+    ['Workflow', ['GIT', 'Terminal', 'Gulp', 'Webpack']]
+  ]
 
 section.skills#skills
   .container.skills__container
     .skills__content-wrapper
-      h2.title.title--skills.skills__title Чем я могу быть полезен вам
+      h2.title.title--skills Чем я могу быть полезен вам
       .skills__content
         .skills__image-block
           +image("bg/bag.png", "skills__img")
         .skills__content-charts
           p.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-          ul.skills__charts-block
-            li.skills__charts-row.skills__charts-row--frontend
-              h3.skills__charts-row-title Front-end
-              ul.skills__list
-                each skill in frontSkills
-                  li(class=`skills__item skills__item--${skill}`)
-                    svg.skills__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
-                      circle.skills__circle.skills__circle--under(cx="50" cy="50" r="40")
-                      circle.skills__circle.skills__circle--above(cx="50" cy="50" r="40")
-                    span.skills__title #{skill}
-            li.skills__charts-row.skills__charts-row--workflow
-              h3.skills__charts-row-title Workflow
-              ul.skills__list
-                each skill in workflowSkills
-                  li(class=`skills__item skills__item--${skill}`)
-                    svg.skills__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
-                      circle.skills__circle.skills__circle--under(cx="50" cy="50" r="40")
-                      circle.skills__circle.skills__circle--above(cx="50" cy="50" r="40")
-                    span.skills__title #{skill}
+          ul.skills__stack
+            each stackRow in stackItems
+              li(class="stack")
+                h3.stack-row__title #{stackRow[0]}
+                ul.stack-row__list
+                  each skill in stackRow[1]
+                    li(class=`skill skill--${skill}`)
+                      svg.skill__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
+                        defs
+                          linearGradient#circle-gradient(x1="0%" y1="0%" x2="0%" y2="100%")
+                            stop(offset="0%" stop-color="#00bc9b")
+                            stop(offset="100%" stop-color="#5eaefd")
+                        circle.skill__circle.skill__circle--under(cx="50" cy="50" r="40")
+                        circle.skill__circle.skill__circle--above(cx="50" cy="50" r="40" stroke="url(#circle-gradient)")
+                      span.skill__title #{skill}
