--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,13 +1,32 @@
+.skill {
+  position: relative;
+  width: 135px;
+  height: 135px;
+}
+
+.skill__chart {
+  width: 100%;
+  height: 100%;
+}
+
 .skill__circle {
   fill: transparent;
 
   &--under {
     stroke-width: 5PX;
-    /* stroke: #eaeaea; */
+    stroke: #eaeaea;
   }
 
   &--above {
     stroke-width: 10PX;
-    /* stroke: #ad00ed; */
   }
+}
+
+.skill__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  text-align: center;
 }
