--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,29 +1,24 @@
 .skills__container {
-  /* padding: 10% 0; */
+  padding: 10% 0;
 }
 
 .skills__content {
   display: flex;
-  align-items: flex-end;
+  align-items: stretch;
+
+  &:before {
+    content: "";
+    display: block;
+    width: 50%;
+    height: 450px;
+    background: url("../images/bg/bag.png") center center no-repeat;
+    background-size: contain;
+  }
+
 }
 
-.skills__item {
-  position: relative;
-  width: 135px;
-  height: 135px;
+.skills__content-charts {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
-.skills__title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: inline-block;
-  text-align: center;
-}
-
-.skills__chart {
-  width: 100%;
-  height: 100%;
-}
-
