--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -13,8 +13,8 @@
 
   &--skills {
     text-align: center;
-    /* font-size: 30px;
-    font-weight: bold; */
+    font-size: 30px;
+    font-weight: bold;
   }
 
   &--reviews {
