styles for skills and works sections

--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -1,7 +1,7 @@
-.skill {
+.skill__wrapper {
   position: relative;
-  width: 135px;
-  height: 135px;
+  width: 150px;
+  height: 150px;
 }
 
 .skill__chart {
@@ -29,4 +29,7 @@
   transform: translate(-50%, -50%);
   display: inline-block;
   text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: rgba(65, 76, 99, 0.5);
 }
