--- a/src/templates/blocks/works.pug
+++ b/src/templates/blocks/works.pug
@@ -13,7 +13,7 @@
 section.works#works
   .container.works__container
     .works__content-wrapper
-      h2.title.title--works Мои работы
+      h2.title.title--works.works__title Мои работы
       .works__content
         .works__slider
           ul.works__slider-list
@@ -35,7 +35,7 @@ section.works#works
               .works__desc-block
                 ul.works__tech-list
                   each item in techList
-                    span.works__tech-item #{item}
+                    span.tech.works__tech-item #{item}
                 .works__desc
                   .works__desc-title Сайт школы образования
                   .works__desc-text Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
