--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,24 +1,34 @@
 .skills__container {
-  padding: 10% 0;
+  padding: 5% 0;
+}
+
+.skills__title {
+  margin-bottom: 5%;
 }
 
 .skills__content {
-  display: flex;
-  align-items: stretch;
-
-  &:before {
-    content: "";
-    display: block;
-    width: 50%;
-    height: 450px;
-    background: url("../images/bg/bag.png") center center no-repeat;
-    background-size: contain;
-  }
-
+  padding-left: 33%;
+  background: url("../images/bg/bag.png") 0 0 no-repeat;
+  background-size: contain;
 }
 
-.skills__content-charts {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.skills__bg-image-wrapper {
+  width: 50%;
+  height: 100%;
+}
+
+
+.skills__desc {
+  color: rgba(65, 76, 99, 0.5);
+  font-weight: 600;
+  display: block;
+}
+
+.skills__stack-list {
+  padding-left: 15%;
+  padding-top: 5%;
+}
+
+.skills__stack-item {
+  margin-bottom: 5%;
 }
