--- a/src/styles/blocks/stack-row.pcss
+++ b/src/styles/blocks/stack-row.pcss
@@ -2,3 +2,17 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.stack-row__title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 2%;
+}
+
+.stack-row__item {
+  margin-right: 2%;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
