--- a/src/templates/blocks/hero.pug
+++ b/src/templates/blocks/hero.pug
@@ -3,6 +3,7 @@ section.hero.fullscreen-section#hero
     include ./header
     .hero__greeting-block-wrapper
       .hero__greeting-block
-        h2.hero__greeting-text Личный сайт веб-разработчика
+        span.hero__greeting-text Личный сайт
+        span.hero__greeting-text веб-разработчика
         h1.title.title--hero Платон Ясев
     include ./scroll
