--- a/src/templates/blocks/skills.pug
+++ b/src/templates/blocks/skills.pug
@@ -10,19 +10,22 @@ section.skills#skills
       h2.title.title--skills.skills__title Чем я могу быть полезен вам
       .skills__content
         .skills__content-charts
-          span.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-          ul.skills__stack
+          span.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования
+          span.skills__desc LoftSchool. Чуть позже я освежу в нём свой контент.
+          span.skills__desc А пока посмотрите, как тут всё классно и красиво!
+          ul.skills__stack-list
             each stackRow in stackItems
-              li(class="stack")
+              li.stack.skills__stack-item
                 h3.stack-row__title #{stackRow[0]}
                 ul.stack-row__list
                   each skill in stackRow[1]
-                    li(class=`skill skill--${skill}`)
-                      svg.skill__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
-                        defs
-                          linearGradient#circle-gradient(x1="0%" y1="0%" x2="0%" y2="100%")
-                            stop(offset="0%" stop-color="#ad00ed")
-                            stop(offset="100%" stop-color="#5500f2")
-                        circle.skill__circle.skill__circle--under(cx="50" cy="50" r="40")
-                        circle.skill__circle.skill__circle--above(cx="50" cy="50" r="40" stroke="url(#circle-gradient)")
-                      span.skill__title #{skill}
+                    li.skill.stack-row__item
+                      .skill__wrapper
+                        svg.skill__chart(viewBox="0 0 100 100" preserveAspectRatio="none")
+                          defs
+                            linearGradient#circle-gradient(x1="0%" y1="0%" x2="0%" y2="100%")
+                              stop(offset="0%" stop-color="#ad00ed")
+                              stop(offset="100%" stop-color="#5500f2")
+                          circle.skill__circle.skill__circle--under(cx="50" cy="50" r="40")
+                          circle.skill__circle.skill__circle--above(cx="50" cy="50" r="40" stroke="url(#circle-gradient)")
+                        span.skill__title #{skill}
