style reviews section

--- a/src/styles/blocks/arrow.pcss
+++ b/src/styles/blocks/arrow.pcss
@@ -17,10 +17,12 @@
 
   &--left {
     transform: translate(-50%, -50%) rotate(180deg);
+    fill: #2d3c4e;
   }
 
   &--right {
     transform: translate(-50%, -50%);
+    fill: #2d3c4e;
   }
 
   
