--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,5 +1,5 @@
 .reviews {
-  width: 70%;
+  width: 72%;
   padding: 200px 0;
 }
 
@@ -18,11 +18,12 @@
   position: relative;
   width: 50px;
   height: 50px;
-  border: 1px solid grey;
+  border: 1px solid #2d3c4e;
   border-radius: 50%;
+  flex-shrink: 0;
 
   &:not(:last-child) {
-    margin-right: 5%;
+    margin-right: 20%;
   }
 }
 
@@ -32,27 +33,10 @@
 }
 
 .reviews__item {
-  flex: 1 0 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  margin-right: 4%;
+  width: 50%;
 
-.reviews__content {
-  margin-bottom: 20px;
-}
-
-.reviews__person-info {
-  display: flex;
-  align-items: center;
-}
-
-.reviews__img-wrapper {
-  width: 100px;
-  height: 100px;
-  margin-right: 20px;
-}
-
-.reviews__img {
-  border-radius: 50%;
+  &:last-child {
+    margin-right: 0;
+  }
 }
