--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -41,7 +41,7 @@
   bottom: 0;
   right: 0;
   height: 90%;
-  box-shadow: -30px 0px 50px -10px rgba(0,0,0,0.5)
+  box-shadow: -30px 0px 50px -10px rgba(0, 0, 0, 0.5);
 }
 
 .works__preview-item {
@@ -114,7 +114,8 @@
     display: block;
     width: 15px;
     height: 15px;
-    background: svg-load('link.svg', fill=$links-color, width=100%, height=100%) center center no-repeat;
+    background: svg-load("link.svg", fill=$links-color, width=100%, height=100%)
+      center center no-repeat;
     margin-right: 5%;
   }
 }
