--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -17,10 +17,14 @@
 .contacts__form-row {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 5%;
+  margin-bottom: 50px;
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  &--last {
+    margin-bottom: 12%;
   }
 }
 
@@ -35,7 +39,7 @@
 
 .contacts__form-block {
   border-bottom: 1px solid $text-color;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 .contacts__form-label {
@@ -43,15 +47,56 @@
   color: rgba(65, 76, 99, 0.3);
   font-size: 16px;
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
+  position: relative;
+
+  &--textarea {
+
+    &:after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 25px;
+      height: 25px;
+      bottom: -180%;
+      left: 0;
+      background: svg-load(
+          "message.svg",
+          fill=rgba($text-color, .3),
+          width=100%,
+          height=100%
+        )
+        0 0 no-repeat;
+    }
+  }
 }
 
 .contacts__form-input {
   width: 100%;
   border: none;
-  background: transparent;
   font-size: 18px;
   font-weight: bold;
+  padding-left: 30px;
+
+  &--name {
+    background: svg-load(
+        "user.svg",
+        fill=rgba($text-color, 0.3),
+        width=100%,
+        height=100%
+      )
+      0 0 no-repeat;
+  }
+
+  &--email {
+    background: svg-load(
+        "envelope.svg",
+        fill=rgba($text-color, 0.3),
+        width=100%,
+        height=100%
+      )
+      0 0 no-repeat;
+  }
 }
 
 .contacts__form-textarea {
@@ -61,6 +106,7 @@
   resize: vertical;
   font-size: 18px;
   font-weight: bold;
+  padding-left: 30px;
 }
 
 .contacts__form-sumbit-btn {
