--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -77,6 +77,15 @@ img {
   max-height: 100%;
 }
 
+blockquote {
+  padding: 0;
+  margin: 0;
+}
+
+cite {
+  font-style: normal;
+}
+
 
 /* layout classes */
 .wrapper {
