--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -48,9 +48,10 @@
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 15px;
-  position: relative;
+  padding-left: 30px;
 
   &--textarea {
+    position: relative;
 
     &:after {
       content: "";
