--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -12,6 +12,7 @@
 
 .footer__copyright {
   margin-right: 5%;
+  width: 30%;
 }
 
 .footer__content {
@@ -25,6 +26,8 @@
 .footer__content-data {
   display: flex;
   justify-content: space-between;
+  color: rgba(255, 255, 255, 0.3);
+  line-height: 1.88;
 }
 
 .footer__about-me {
