--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -4,14 +4,37 @@
 }
 
 .socials__item {
-
   &:not(:last-child) {
     margin-right: 40px;
   }
+
+  &--rounded {
+    display: block;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+
+    &:not(:last-child) {
+      margin-right: 5%;
+    }
+  }
+
 }
 
 .socials__icon {
   width: 25px;
   height: 25px;
   fill: $text-color;
+
+  &--rounded {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    fill: rgba(255, 255, 255, 0.3);
+  }
 }
