--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -9,4 +9,10 @@
   &:not(:last-child) {
     margin-right: 60px;
   }
+
+  &:hover {
+    .nav__link {
+      text-decoration: underline;
+    }
+  }
 }
