--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -8,6 +8,13 @@
     width: 30px;
     height: 30px;
     background: svg-load('scroll.svg', fill=$text-color, width=100%, height=100%) center center no-repeat;
+    transition: transform .3s;
+  }
+
+  &:hover {
+    &:after {
+      transform: scale(1.2);
+    }
   }
 }
 
