--- a/src/styles/blocks/review.pcss
+++ b/src/styles/blocks/review.pcss
@@ -48,10 +48,12 @@
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 5%;
+  display: block;
 }
 
 .review__position {
   font-size: 16px;
   font-weight: 600;
   color: rgba(65, 76, 99, 0.3);
+  display: block;
 }
