add active and focus state

--- a/src/index.pug
+++ b/src/index.pug
@@ -212,7 +212,7 @@ html(lang="ru")
                     .reviews__arrows
                       button(type="button").reviews__btn.reviews__btn--left
                         +icon('arrow-down', 'arrow arrow--left')
-                      button(type="button").reviews__btn.reviews__btn--left
+                      button(type="button").reviews__btn.reviews__btn--right
                         +icon('arrow-down', 'arrow arrow--right')
                   ul.reviews__list
                     each item in reviewsItems
