--- a/src/styles/blocks/arrow.pcss
+++ b/src/styles/blocks/arrow.pcss
@@ -6,21 +6,25 @@
   height: 20%;
 
   &--up {
+    transition: all .3s;
     transform: translate(-50%, -50%) rotate(-90deg);
     fill: white;
   }
 
   &--down {
+    transition: all .3s;
     transform: translate(-50%, -50%) rotate(90deg);
     fill: white;
   }
 
   &--left {
+    transition: all .3s;
     transform: translate(-50%, -50%) rotate(180deg);
     fill: #2d3c4e;
   }
 
   &--right {
+    transition: all .3s;
     transform: translate(-50%, -50%);
     fill: #2d3c4e;
   }
