--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -120,4 +120,9 @@
   border-radius: 5px;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  transition: opacity .3s;
+
+  &:hover {
+    opacity: .8;
+  }
 }
