--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -5,8 +5,6 @@
 
 .socials__item {
 
-  cursor: pointer;
-
   &:not(:last-child) {
     margin-right: 40px;
   }
@@ -22,19 +20,28 @@
     &:not(:last-child) {
       margin-right: 5%;
     }
+  }
+}
 
-    &:hover {
-      .socials__icon--rounded {
-        transform: scale(1);
-        fill: #fff;
-      }
+.socials__link {
+
+  &:hover {
+
+    .socials__icon--rounded {
+      fill: #fff;
+    }
+
+    .socials__icon:not(.socials__icon--rounded) {
+      transform: scale(1.2);
     }
   }
 
-  &:hover {
+  &:active {
+
     .socials__icon {
-      transform: scale(1.2);
+      fill: #000;
     }
+
   }
 }
 
