--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -124,11 +124,30 @@
   }
 
   &:hover {
+    text-decoration: underline;
+  }
+
+  &:focus {
+
+    color: #000;
+
+
+    &:before {
+      background: svg-load("link.svg", fill=#000, width=100%, height=100%)
+      center center no-repeat;
+    }
+
+  }
+
+  &:active {
+
     color: red;
+
 
     &:before {
       background: svg-load("link.svg", fill=red, width=100%, height=100%)
       center center no-repeat;
     }
+
   }
 }
