add social links

--- a/src/index.pug
+++ b/src/index.pug
@@ -40,6 +40,7 @@ html(lang="ru")
 
                   - var socialItems = ['insta', 'vk', 'github'];
                   - var socialAriaLabels = ['Перейти в Instagram', 'Перейти на ВКонтакте', "Перейти на GitHub"];
+                  - var socialLinks = ['https://www.instagram.com/yasevplaton/', 'https://vk.com/yasevplaton', "https://github.com/yasevplaton"];
 
                   .socials
                     ul.socials__list
